src/resources/sass/_custom.scss
@import "variables";

.post-content {
  width: 45%;
}

// For posts page (feed)
.post-container-content-feed {
  padding: 10px 25px;
  overflow-wrap: break-word;
}

.post-container-feed {
  margin: 20px 0;
  transition: box-shadow 0.4s ease-in-out;
  border-radius: 10px;

  a {
    color: $color-black;
    text-decoration: none;
  }

  #arrow {
    opacity: 0;
    transition: opacity 0.3s ease-in;
  }
}

.post-container-feed:hover {
  img {
    transform: scale(1.3);
  }

  #arrow {
    opacity: 1;
    transition: opacity 0.4s ease-in;
  }

  cursor: pointer;
  box-shadow: 2px 2px 10px $color-gray;
  transition: box-shadow 0.4s ease-in-out;
}

.post-title {
  margin-top: 20px;
}

.post-meta {
  i {
    padding-right: 3px;
  }

  i:not(:first-child) {
    padding-left: 10px;
  }
}

.pagination-wrapper {
  margin: 30px 0 40px;
}

.avatar {
  max-width: 100%;
  display: block;
  margin: 5px 0 10px;
}

.avatar-small {
  max-width: 32px;
}

.section-space {
  margin-top: 50px;
}

.avatar-upload-criteria {
  margin-bottom: 20px;
  display: block;
}

.image-row-container {
  padding: 20px 5px 10px;
}

.image-preview {
  max-height: 200px;
  margin: 20px;
}

.image-page-image-container {
  display: flex;
  flex-direction: column;
}

.auto-margin-top {
  margin-top: auto;
}

.category-button {
  margin: 4px 2px;
}

#banner-image-preview {
  max-height: 32px;
  padding: 0 10px;
}

